force-app/main/default/objects/Manager__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Calculates the age of the manager</description>
    <formula>IF(MONTH(TODAY())&gt;MONTH( BirthDate__c ), YEAR(TODAY())- YEAR(BirthDate__c), IF(AND(MONTH(TODAY())=MONTH(BirthDate__c), DAY (TODAY())&gt;=DAY(BirthDate__c)), YEAR( TODAY())-YEAR(BirthDate__c), (YEAR(TODAY())-YEAR(BirthDate__c))-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>