force-app/main/default/objects/Manager__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores whether the 
manager is currently 
part of organization or 
not</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>