force-app/main/default/objects/Manager__c/fields/IT_Teams__c.field-meta.xml
<CustomField>
    <fullName>IT_Teams__c</fullName>
    <description>IT Teams
Admin
DevOps</description>
    <label>IT Teams</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT Teams</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>