force-app/main/default/objects/Manager__c/validationRules/Phone_Email_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Email_validation</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK( Phone__c ) || ISBLANK( Email__c ))</errorConditionFormula>
    <errorMessage>You must fill email and phone before 
saving</errorMessage>
</ValidationRule>